fixed shape overflow issue

--- a/css/framework.css
+++ b/css/framework.css
@@ -33,8 +33,9 @@ div#lower .large-12 h3{text-align: right;float: right}
 
 @media screen and (max-width: 500px) {
     #shapes .mask1 {
-        left: -125px;
-        top: -120px;position: absolute;
+        height: 345px;width: 340px;
+        left: -135px;top: -180px;
+        position: absolute;
     }
 }
 
@@ -124,7 +125,7 @@ div#socribbon :hover {
     text-align: center;
     position: absolute;
     font-size: 300%;
-    top: 26px;
+    top: 23px;
     width: 100%;
 }
 #welcome h3 {
